--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,30 @@
   --main-bg-colour: #ffffff;
 }
 
+/* RESET */
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+img {
+  display: block;
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
 body {
   background: var(--main-bg-colour);
   color: var(--main-text-colour);
@@ -15,9 +39,19 @@ body {
 
   cursor: default;
 }
-ul {
-  list-style: none;
+
+/* Components */
+
+.container {
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  outline: 2px solid tomato;
 }
+
+/* Header */
 
 .logo {
   color: #2e2f42;
@@ -36,7 +70,15 @@ ul {
   color: #4d5ae5;
 }
 
+.header {
+  padding: 24px 0;
+}
+
 /* Site-nav */
+.site-nav {
+  display: flex;
+  justify-content: left;
+}
 .site-nav .link {
   color: var(--main-title-colour);
 
@@ -64,6 +106,9 @@ ul {
   text-decoration: none;
 
   cursor: default;
+
+  display: flex;
+  justify-content: right;
 }
 
 .link-addres:hover,
@@ -75,6 +120,8 @@ ul {
 
 .hero {
   background-color: #2e2f42;
+  padding: 188px 0;
+  text-align: center;
 }
 
 .hero-title {
@@ -82,6 +129,7 @@ ul {
 
   font-size: 56px;
   line-height: 1.1;
+  margin-bottom: 48px;
 }
 
 .button {
@@ -129,18 +177,22 @@ ul {
   font-size: 36px;
   line-height: 1.1;
   text-transform: capitalize;
+  text-align: center;
+  margin-bottom: 72px;
 }
 
 .section-subtitle {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  margin-bottom: 8px;
 }
 
 .section-text {
   color: var(--main-text-colour);
 
   line-height: 1.5;
+  margin-top: 8px;
 }
 
 .section-descr {
@@ -174,8 +226,8 @@ ul {
 
 .footer-text {
   color: #e7e9fc;
-
   line-height: 1.5;
+  margin-top: 8px;
 }
 
 /* Page Portfolio */
